# quadly

.github/: copilot-instructions.md
backend/: .gitignore  Cargo.toml
backend/migrations/: 20240101000000_create_users.sql  20260206191933_users.up.sql
backend/src/: main.rs
backend/src/api/: auth.rs  health.rs  mod.rs  quadlet.rs
backend/src/core/: mod.rs  parser.rs  quadlet.pest  validator.rs
backend/src/models/: error.rs  mod.rs  quadlet.rs  quadlet_type.rs  response.rs  token_claims.rs  user.rs
backend/src/system/: db.rs  logs.rs  mod.rs  systemd.rs  test_systemd.rs
frontend/src/bindings/: AppError.ts  Quadlet.ts  QuadletInfo.ts  QuadletStatus.ts  QuadletType.ts
