[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono"] }
zbus = "5.13.2"
