[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.81"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
cookie = "0.18.1"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tower_governor = "0.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono"] }
zbus = "5.13.2"
